--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
-  "name": "masterPortfolio",
-  "homepage": ".",
+  "name": "saiPortfolio",
+  "homepage": "https://sai-potala.github.io",
   "version": "0.1.0",
   "scripts": {
     "build": "react-scripts build",
@@ -13,13 +13,16 @@
   },
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
+    "animejs": "^3.2.1",
     "apollo-boost": "^0.4.4",
     "baseui": "^9.65.3",
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
+    "framer-motion": "^10.12.18",
     "fs": "0.0.1-security",
     "gh-pages": "^2.1.1",
     "graphql": "^14.5.8",
+    "gsap": "^3.12.2",
     "node-fetch": "^2.6.0",
     "prettier-package-json": "^2.1.3",
     "radium": "^0.26.0",
@@ -28,10 +31,13 @@
     "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.10.2",
     "react-helmet": "^6.1.0",
+    "react-intersection-observer": "^9.5.2",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
-    "react-spring": "^8.0.27",
+    "react-spring": "^9.7.2",
+    "react-textfit": "^1.1.1",
+    "react-typical": "^0.1.3",
     "styled-components": "^5.1.1",
     "styletron-engine-atomic": "^1.4.6",
     "styletron-react": "^5.2.7"
